--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -21,11 +21,36 @@
 
 .header_search {
     @apply 
-    flex-row
+    flex
 }
 
-.nav{
+.header_searchInput {
     @apply
-    flex
-    items-center
+    flex-grow
+    focus:outline-none
+    border-none
+    p-2
+  rounded-md
+    h-10
+    w-[800px]
+   m-3
+    text-white
+mr-[70vh]
+  
 }
+
+.header_searchIcon{
+@apply
+bg-[#cd9042]
+
+
+
+}
+
+
+ .nav{
+    @apply
+  flex
+    items-center
+    justify-evenly
+} 
