--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,54 +3,50 @@
 @tailwind utilities;
 
 .header {
-    @apply flex bg-[#131921]
-    text-white
-    justify-between
-    h-16
-    sticky
-    top-0
-    z-[100]
-    
-}
-.header-logo{
     @apply
-   mx-6
-   
+        flex
+        bg-[#131921]
+        text-white
+        justify-between
+        h-16
+        sticky
+        top-0
+        z-[100]
+}
 
-} 
+.header-logo {
+    @apply
+        mx-6
+}
 
 .header_search {
-    @apply 
-    flex
+    @apply
+        flex
 }
 
 .header_searchInput {
     @apply
-    flex-grow
-    focus:outline-none
-    border-none
-    p-2
-  rounded-md
-    h-10
-    w-[800px]
-   m-3
-    text-white
-mr-[70vh]
-  
+        flex-grow
+        focus:outline-none
+        border-none
+        p-2
+        rounded-md
+        h-10
+        w-full    
+        md:w-[800px] 
+        m-3
+        text-white
+        md:mr-[70vh] 
 }
 
-.header_searchIcon{
-@apply
-bg-[#cd9042]
-
-
-
-}
-
-
- .nav{
+.header_searchIcon {
     @apply
-  flex
-    items-center
-    justify-evenly
-} 
+        bg-[#cd9042]
+}
+
+.nav {
+    @apply
+        flex
+        items-center
+        justify-evenly
+}
