--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,26 +1,40 @@
-/* .home {
-     display: flex;
-    justify-content: center; 
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1500px;
-  } */
-.home__image {
-    width: 100%;
-    z-index: -1;
-    margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+.home {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
+}
 
+.home__image {
+  width: 100%;
+  z-index: -1;
+  margin-bottom: -150px;
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
 .home__Card {
-    @apply 
-    flex
+  @apply
+  flex;
 }
 
-.home__row {  
-    display: flex; 
-    z-index: 1; 
-    margin-left: 5px;  
-    margin-right: 5px;
+.home__row {
+  display: flex;
+  justify-content: center; /* Center the items in the row */
+  z-index: 1;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .home {
+    flex-direction: column; /* Change to column layout on smaller screens */
+    align-items: center; /* Center items in the column layout */
   }
+
+  .home__row {
+    flex-direction: column; /* Change to column layout for the row on smaller screens */
+    text-align: center; /* Center text in the row */
+  }
+}
